# prelegal

./: .dockerignore  .gitignore  DOCKER_GUIDE.md  Dockerfile  FEATURES.md  LICENSE  NDA_FORM_GUIDE.md  README.md  REVIEW.md  start.sh
.claude/: CLAUDE.md
backend/: .gitignore  alembic.ini  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: auth.py  config.py  database.py  models.py  schemas.py
backend/app/routes/: auth.py  chat.py  users.py
backend/tests/: conftest.py  test_auth.py  test_chat.py  test_documents.py  test_favorites.py  test_users.py
frontend/: MANUAL_TESTING.md  TESTING.md  jest.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/src/__tests__/components/: CategoryFilter.test.tsx  SearchBar.test.tsx  TemplateCard.test.tsx
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/documents/: page.tsx
frontend/src/components/: CategoryFilter.tsx  DocumentChat.tsx  Header.tsx  NDAChat.tsx  NDAForm.tsx  ProtectedRoute.tsx  SearchBar.tsx  TemplateCard.tsx  TemplateGrid.tsx  TemplateViewer.tsx
frontend/src/context/: AuthContext.tsx  TemplateContext.tsx  ThemeContext.tsx
frontend/src/hooks/: useAuth.ts
frontend/src/lib/: api.ts  disclaimer.ts  templateLoader.ts  utils.ts
frontend/src/types/: jest-dom.d.ts  template.ts
scripts/: start-linux.sh  start-mac.sh  start-windows.ps1  stop-mac.sh  stop-windows.ps1
templates/: index.json  laws_reference.json  loader.py  mnda.json  nda.json  nda_comprehensive.json  service_agreement.json
(+10 files in other folders)
