[project]
name = "prelegal-backend"
version = "0.1.0"
description = "Legal document template platform backend"
requires-python = ">=3.9"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.0",
    "sqlalchemy==2.0.25",
    "alembic==1.13.1",
    "pydantic==2.7.0",
    "pydantic-settings==2.3.0",
    "python-multipart==0.0.6",
    "python-dotenv==1.0.0",
    "litellm==1.40.0",
    "email-validator==2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "httpx==0.25.2",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]
